עיצוב מסך הבית - נשאר לעשות פרופיל + דברים פנימיים ותפריט

--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -6,10 +6,10 @@
     </div>
 *@
     <main>
-        @*<div class="top-row auth">
+        <div class="top-row auth">
             <LoginDisplay />
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>*@
+        </div>
 
         <article>
             @Body
