--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -52,7 +52,7 @@
                     <tr>
                         <td>@currentUser.spendingValueFullList</td>
                         <td id="middleTableRow">@currentUser.incomeValueFullList</td>
-                        <td>
+                        <td id="leftTableRow">
                             @currentUser.budgetFullValue%
                             <br />
                             <span id="fromBudget">מהתקציב</span>
@@ -61,7 +61,48 @@
                     </tr>
                 </tbody>
             </table>
-            <button class="primery-button">מצב החודש כרגע</button>
+            <button class="primery-button" @onclick="getSubCatTotalsForStory">מצב החודש כרגע</button>
+            @if (storyPopUpWindow)
+            {
+                <div id="storyWindow">
+                    <span class="close-button" @onclick="StoryWindowControl">&times;</span> <br />
+                    <div class="indicators">
+                        <span class="storyPhase @(storyNav == 1 ? "active" : "")"></span>
+                        <span class="storyPhase @(storyNav == 2 ? "active" : "")"></span>
+                        <span class="storyPhase @(storyNav == 3 ? "active" : "")"></span>
+                    </div> <br>
+                    <div class="navigation">
+                        <button @onclick="PreviousStory" disabled="@((storyNav == 1))">Previous</button>
+                        <button @onclick="NextStory" disabled="@((storyNav == 3))">Next</button>
+                    </div>
+                    @if (storyNav == 1 && subCatsTotalsStory.Count > 0)
+                    {
+                        <h2>היי @currentUser.firstName! רוצה לראות איך עובר החודש?</h2>
+                        <p>אלה תתי הקטגוריות שהכי בלטו עד כה:</p>
+                        <div>
+
+                            <span>👍</span>
+                            <h3>החסכון הגדול ביותר</h3>
+                            <p>עד כה החודש הוצאת @subCatsTotalsStory[bestSavingIndex].currentMonthTotal₪ על @bestSavingSubCat, @bestSavingValue₪ פחות מחודש שעבר! </p>
+
+                            <span>👎</span>
+                            <h3>העלייה הגדולה ביותר</h3>
+                            <p>עד כה החודש הוצאת @subCatsTotalsStory[worstSavingIndex].currentMonthTotal₪ על @worstSavingSubCat, @worstSavingValue₪ יותר מחודש שעבר! </p>
+                        </div>
+                    }
+                    else if (storyNav == 2 && tagsSpendingsList.Count > 0)
+                    {
+                        <h3>התגיות עם הכי הרבה הוצאות</h3>
+                        <ol>
+                            @foreach (TagsAndSpendingsToShow tag in tagsSpendingsList)
+                            {
+                                <li>הוצאת על @tag.tagTitle @tag.totalValue ₪</li>
+                            }
+                        </ol>
+
+                    }
+                </div>
+            }
         </div>
 
         <div class="toggleWrap">
@@ -70,26 +111,30 @@
             {
                 <div class="innerToggle">
                     <p class="toggleTitles">הכנסות</p>
-                    
-                        <label class="switch">
+
+                    <label class="switch">
                         <span class="knob"></span>
-                            <input type="checkbox" @bind="isChecked">
-                            <span class="slider"></span>
-                        </label>
+                        <input type="checkbox" @bind="isChecked">
+                        <span class="slider"></span>
+                    </label>
 
                     <p class="toggleTitlesNotChosen">הוצאות</p>
                 </div>
+                @if (userIncomeCat != null)
+                {
+                    <CategoryComponent Category=userIncomeCat categoryTitle="userIncomeCat.categroyTitle" icon="userIncomeCat.icon" categoryColor="userIncomeCat.color" doRefresh="@doRefresh" userID="@userID" deleteCat="removeCat" subCatRefreshed="@accordionRefresh" givingSubCatBudget="changeGivingSubCatBudget" givingSubCat="givingSubCatToUpdate"></CategoryComponent>
+                }
             }
-            else 
+            else
             {
                 <div class="innerToggle">
                     <p class="toggleTitlesNotChosen">הכנסות</p>
-                    
-                        <label class="switchSpendings">
+
+                    <label class="switchSpendings">
                         <span class="knob"></span>
                         <input type="checkbox" class="hidden-checkbox" @bind="isChecked">
-                            <span class="slider"></span>
-                        </label>
+                        <span class="slider"></span>
+                    </label>
 
                     <p class="toggleTitles">הוצאות</p>
                 </div>
@@ -251,9 +296,11 @@
         }
 
         <div id="bottomNav">
-            <button>מבט לעבר</button>
-            <button>מבט להווה</button>
-            <button>מבט לעתיד</button>
+            <button class="navBtn">מבט לעבר<img src="../css/images/past.svg" /></button>
+            <div class="NavLines"> </div>
+            <button class="navBtn">מבט להווה<img src="../css/images/present.svg" /></button>
+            <div class="NavLines"> </div>
+            <button class="navBtn">מבט לעתיד<img src="../css/images/future.svg" /></button>
         </div>
     }
 
@@ -295,7 +342,10 @@
 
                 </select>
             </div>
+
             <button @onclick="@(async () => await createNewUser())">שמירה</button>
+
+
         </div>
 
     }
@@ -333,6 +383,20 @@
     bool toSearch = false;
     //bool makeSearchAgain = false;
     //bool isThereCategories => currentUser.categoriesFullList == null || currentUser.categoriesFullList.Count == 0;
+
+    public bool storyPopUpWindow = false;
+    List<StorySubCategoryTotals> subCatsTotalsStory = new List<StorySubCategoryTotals>();
+    string bestSavingSubCat = "";
+    string worstSavingSubCat = "";
+    int bestSavingIndex = 0;
+    int worstSavingIndex = 0;
+    double bestSavingValue = 0;
+    double worstSavingValue = 0;
+    int storyNav = 1;
+    List<TagsAndSpendingsToShow> tagsSpendingsList = new List<TagsAndSpendingsToShow>();
+
+    CategoryToShow userIncomeCat = new CategoryToShow();
+
     CategoryToShow catToDelete = new CategoryToShow();
 
     CategoryToAdd newCategory = new CategoryToAdd();
@@ -463,7 +527,8 @@
                 {
                     new CategoryToAdd{userID = userID, categroyTitle = "משק בית", icon = "🏠", color = "blue" },
                     new CategoryToAdd{userID = userID, categroyTitle = "רכב ותחבורה", icon = "🚗", color = "blue" },
-                    new CategoryToAdd{userID = userID, categroyTitle = "בריאות וטיפוח", icon = "💄", color = "blue" }
+                    new CategoryToAdd{userID = userID, categroyTitle = "בריאות וטיפוח", icon = "💄", color = "blue" },
+                    new CategoryToAdd{userID = userID, categroyTitle = "הכנסות", icon = "💰", color = "blue" }
                 };
 
                 foreach (CategoryToAdd defualtCategory in defualtCategoriesList)
@@ -532,6 +597,26 @@
                                 foreach (SubCategoryToAdd defaultSubCategory3 in defaultSubCategory3List)
                                 {
                                     var defaultSubCategories = await Http.PostAsJsonAsync("api/Present/AddSubCategory/", defaultSubCategory3);
+
+                                    if (defaultCategories.IsSuccessStatusCode)
+                                    {
+                                        msg = "ווהוו לא מעניין את מלכית";
+                                    }
+                                    else
+                                    {
+                                        msg = "לא ווהו, כן מעניין את מלכית";
+                                    }
+                                }
+                                break;
+                            case "הכנסות":
+                                List<SubCategoryToAdd> defaultSubCategory4List = new List<SubCategoryToAdd>()
+                                {
+                                    new SubCategoryToAdd{subCategoryTitle = "משכורת", categoryID = defaultCategory.id}
+                                };
+
+                                foreach (SubCategoryToAdd defaultSubCategory4 in defaultSubCategory4List)
+                                {
+                                    var defaultSubCategories = await Http.PostAsJsonAsync("api/Present/AddSubCategory/", defaultSubCategory4);
 
                                     if (defaultCategories.IsSuccessStatusCode)
                                     {
@@ -642,6 +727,125 @@
         FilterCatsOrSubCats();
     }
 
+    public async Task getSubCatTotalsForStory()
+    {
+        storyPopUpWindow = !storyPopUpWindow;
+        if (storyPopUpWindow)
+        {
+            List<SubCategoryToShow> subCategories = new List<SubCategoryToShow>();
+            subCatsTotalsStory = new List<StorySubCategoryTotals>();
+            //first story stuff:
+            if (currentUser.categoriesFullList.Count > 0)
+            {
+                foreach (CategoryToShow cat in currentUser.categoriesFullList)
+                {
+                    var getAllSubCats = await Http.GetAsync("api/Present/subCategoryToShow/" + cat.id);
+                    if (getAllSubCats.IsSuccessStatusCode)
+                    {
+                        List<SubCategoryToShow> subToAddList = getAllSubCats.Content.ReadFromJsonAsync<List<SubCategoryToShow>>().Result;
+                        if (subToAddList.Count > 0)
+                        {
+                            foreach (SubCategoryToShow subToAdd in subToAddList)
+                            {
+                                subCategories.Add(subToAdd);
+                            }
+
+                        }
+                        else
+                        {
+                            Console.WriteLine("couldn't get one of the sub cats for the story- returned null");
+                        }
+                    }
+                    else
+                    {
+                        Console.WriteLine("couldn't get one of the sub cats for the story- server bad request");
+                    }
+                }
+                if (subCategories.Count > 0)
+                {
+                    foreach (SubCategoryToShow subToCheck in subCategories)
+                    {
+                        var getSubCatTotals = await Http.GetAsync("api/Present/getBestAndWorstSpendings/" + subToCheck.id);
+                        if (getSubCatTotals.IsSuccessStatusCode)
+                        {
+                            StorySubCategoryTotals requestedSubInfo = await getSubCatTotals.Content.ReadFromJsonAsync<StorySubCategoryTotals>();
+                            if (requestedSubInfo != null)
+                            {
+                                subCatsTotalsStory.Add(requestedSubInfo);
+                            }
+                            else
+                            {
+                                Console.WriteLine("couldn't get totals of one of the sub cats for the story- returned null");
+                            }
+
+                        }
+                        else
+                        {
+                            Console.WriteLine("couldn't get totals of one of the sub cats for the story- server bad request");
+                        }
+                    }
+                    if (subCatsTotalsStory.Count > 0)
+                    {
+
+                        for (int i = 1; i < subCatsTotalsStory.Count; i++)
+                        {
+                            double lastMonthGap = subCatsTotalsStory[i - 1].currentMonthTotal - subCatsTotalsStory[i - 1].lastMonthTotal;
+                            double gapCheck = subCatsTotalsStory[i].currentMonthTotal - subCatsTotalsStory[i].lastMonthTotal;
+                            if (gapCheck > lastMonthGap)
+                            {
+                                worstSavingIndex = i;
+                            }
+                            else if (gapCheck < lastMonthGap)
+                            {
+                                bestSavingIndex = i;
+                            }
+                        }
+                        bestSavingSubCat = subCatsTotalsStory[bestSavingIndex].subCategoryTitle;
+                        bestSavingValue = Math.Round(subCatsTotalsStory[bestSavingIndex].lastMonthTotal - subCatsTotalsStory[bestSavingIndex].currentMonthTotal, 2);
+                        if (bestSavingValue < 0)
+                        {
+                            bestSavingIndex *= -1;
+                        }
+
+                        worstSavingSubCat = subCatsTotalsStory[worstSavingIndex].subCategoryTitle;
+                        worstSavingValue = Math.Round(subCatsTotalsStory[worstSavingIndex].currentMonthTotal - subCatsTotalsStory[worstSavingIndex].lastMonthTotal, 2);
+                        if (worstSavingValue < 0)
+                        {
+                            worstSavingValue *= -1;
+                        }
+                    }
+                }
+            }
+            //second story stuff:
+            tagsSpendingsList = new List<TagsAndSpendingsToShow>();
+            var getUserSpendingsByTags = await Http.GetAsync("api/Present/GetTagsAndSpendings/" + currentUser.id);
+            if (getUserSpendingsByTags.IsSuccessStatusCode)
+            {
+                tagsSpendingsList = getUserSpendingsByTags.Content.ReadFromJsonAsync<List<TagsAndSpendingsToShow>>().Result;
+            }
+
+
+        }
+    }
+
+    public void StoryWindowControl()
+    {
+        storyPopUpWindow = false;
+    }
+    public void PreviousStory()
+    {
+        if (storyNav > 1)
+        {
+            storyNav--;
+        }
+    }
+    public void NextStory()
+    {
+        if (storyNav <= 3)
+        {
+            storyNav++;
+        }
+    }
 
 
 
