--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,17 +1,17 @@
 ﻿@inherits LayoutComponentBase
 
-<div style="background-color:#EDEFF7">
-    @*<div class="sidebar">
+<div class="page">
+    <div class="sidebar">
         <NavMenu />
     </div>
-*@
-    <main>
-        <div class="top-row auth">
+
+    <main>        
+        <div class="top-row px-4 auth">
             <LoginDisplay />
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
-        <article>
+        <article class="content px-4">
             @Body
         </article>
     </main>
