--- a/Client/Components/SubCategoryComponent.razor
+++ b/Client/Components/SubCategoryComponent.razor
@@ -10,19 +10,38 @@
 {
     <GeneralPopUpComponent popupTypeTitle="מחיקת תת קטגוריה" middleText="@popupBodyText" action="🗑️מחיקה" makeAction="deleteSubCat" closePopUp="deleteSubCatPopUp"></GeneralPopUpComponent>
 }
-<h3>@subCategoryTitle</h3>
-<button @onclick="goToTransactionsPage"> @totalSpendings/@budget</button>
-@if (totalSpendings > budget)
-{
-    <span>⚠️</span>
-}
-<button @onclick="openAddTransOverlay">+</button>
-<button @onclick="(() => isOptBtnClicked = !isOptBtnClicked)">🚦</button>
+
+<div class="budget-card">
+   
+
+    
+    <div class="budget-header">
+        <div class="textAndLine">
+            <h3 class="subCatTitle">@subCategoryTitle</h3>
+            <div class="subCatLine">
+            </div>
+        </div>
+        
+        <button class="options-button" @onclick="(() => isOptBtnClicked = !isOptBtnClicked)"><img src="../css/images/option menu.svg" /></button>
+    </div>
+
+    <div class="budget-info">
+        <button class="budget-progress" @onclick="goToTransactionsPage">  @budget /  @totalSpendings</button>
+        @if (totalSpendings > budget)
+        {
+            <span>⚠️</span>
+        }
+        <button class="add-transaction-button" @onclick="openAddTransOverlay"><img src="../css/images/+2.svg" /></button>
+    </div>
+</div>
+
+
+
 
 @if (openTransOverlay)
 {
-    <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCategoryIDToGet" isTransactionOverlayOpen="@openAddTransOverlay" userID="@userID" gapsToUpdateBudgets="gapsToUpdateTheBudget"  addTransactionToTotal="addNewTransToTotalSpendings"></AddTransactionComponent>
-    
+    <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCategoryIDToGet" isTransactionOverlayOpen="@openAddTransOverlay" userID="@userID" gapsToUpdateBudgets="gapsToUpdateTheBudget" addTransactionToTotal="addNewTransToTotalSpendings"></AddTransactionComponent>
+
 }
 
 @if (isOptBtnClicked)
@@ -46,7 +65,7 @@
                 subCatToEdit.categroyTitle = categoryTitle;
             }
             <select @bind="subCatToEdit.categroyTitle">
-                
+
                 @foreach (AllUserCategories userCategory in userCategories)
                 {
 
@@ -117,7 +136,6 @@
     </div>
 }
 
-<hr />
 
 @code {
 
@@ -178,7 +196,7 @@
     public void gapsToUpdateTheBudget(List<OverDraftBudgetToEdit> gaps)
     {
         subCatTakenBudget.InvokeAsync(gaps);
-        
+
     }
 
 
@@ -211,9 +229,9 @@
             List<AllUserCategories> tempUserCategories = new List<AllUserCategories>();
             foreach (AllUserCategories category in userCategories)
             {
-                if (category.id==categoryID)
+                if (category.id == categoryID)
                 {
-                    tempUserCategories.Insert(0,category);
+                    tempUserCategories.Insert(0, category);
                 }
                 else
                 {
@@ -292,6 +310,6 @@
 
     public void goToTransactionsPage()
     {
-        nav.NavigateTo("./TransactionsOverview/" + subCategoryIDToGet + "/" + categoryID+"/"+budget+"/"+userID);
+        nav.NavigateTo("./TransactionsOverview/" + subCategoryIDToGet + "/" + categoryID + "/" + budget + "/" + userID);
     }
 }
