--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -337,6 +337,11 @@ input:checked + .slider:before {
     /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);or depth */
 }
 
+
+.fullCategory{
+    display:flex;
+}
+
 #bottomNav {
     background-color: #F9F9F9;
     border-radius: 1.25rem 1.25rem 0rem 0rem;
@@ -350,8 +355,9 @@ input:checked + .slider:before {
     box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.1); /* Shadow added here */
     position: fixed;
     bottom: 0;
+    z-index: 2;
 }
-}
+
 
 .NavLines {
     content: "";
