--- a/Client/Components/TransOverviewComponent.razor
+++ b/Client/Components/TransOverviewComponent.razor
@@ -6,7 +6,7 @@
 
 
 <h4>@transaction.transTitle</h4>
-<span>@transaction.transValue ₪</span>
+<span>@Math.Round(transaction.transValue,2) ₪</span>
 <OptionsMenuComponent deleteBtnClicked="deleteTransPopUp" editBtnClicked="editTransPopUp"></OptionsMenuComponent>
 @if (deleteBtnClicked)
 {
@@ -18,23 +18,7 @@
     {
         if (transaction.splitPayment)
         {
-            TransactionToAdd splitParentTrans = new TransactionToAdd()
-                        {
-                            subCategoryID = subCatID,
-                            transValue = transaction.transValue,
-                            transType = transaction.transType,
-                            valueType = transaction.valueType,
-                            transDate = DateTime.Parse(transaction.transDate),
-                            fixedMonthly = transaction.fixedMonthly,
-                            tagID = transaction.tagID,
-                            tagTitle = transaction.tagTitle,
-                            tagColor = transaction.tagColor,
-                            transTitle = transaction.transTitle,
-                            parentTransID = transaction.parentTransID,
-                            description = transaction.description,
-                            splitPayment = transaction.splitPayment
-                        };
-            <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCatID" userID="@userID" gapsToUpdateBudgets="gapsToUpdateTheBudget" addTransactionAfterEdit="updateTranPostEdit" transIDtoEdit="@transaction.id" isTransactionOverlayOpen="closeEditTransWindow" overdraftNotTreated="showOverdraftingTrans" SplitPaymentWithIndex="paymentsDisplay" newTransaction="splitParentTrans"></AddTransactionComponent>
+            <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCatID" userID="@userID" gapsToUpdateBudgets="gapsToUpdateTheBudget" addTransactionAfterEdit="updateTranPostEdit" transIDtoEdit="@transIDtoEdit" isTransactionOverlayOpen="closeEditTransWindow" overdraftNotTreated="showOverdraftingTrans" SplitPaymentWithIndex="paymentsDisplay"></AddTransactionComponent>
         }
         else if (childOfSplit)
         {
@@ -42,24 +26,8 @@
             {
                 if (transaction.parentTransID.Value > 0)
                 {
-                    TransactionToAdd parentTransOfSplit = new TransactionToAdd() //has the split parent details
-                                {
-                                    subCategoryID = subCatID,
-                                    transValue = splitParentTrans.transValue,
-                                    transType = splitParentTrans.transType,
-                                    valueType = splitParentTrans.valueType,
-                                    transDate = splitParentTrans.transDate,
-                                    fixedMonthly = splitParentTrans.fixedMonthly,
-                                    tagID = splitParentTrans.tagID,
-                                    tagTitle = splitParentTrans.tagTitle,
-                                    tagColor = splitParentTrans.tagColor,
-                                    transTitle = splitParentTrans.transTitle,
-                                    parentTransID = splitParentTrans.parentTransID,
-                                    description = splitParentTrans.description,
-                                    splitPayment = splitParentTrans.splitPayment
-                                };
                     Console.WriteLine("split parent was sent to edit");
-                    <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCatID" userID="@userID" gapsToUpdateBudgets="gapsToUpdateTheBudget" addTransactionAfterEdit="updateTranPostEdit" newTransaction="parentTransOfSplit" transIDtoEdit="@transaction.parentTransID.Value" isTransactionOverlayOpen="closeEditTransWindow" overdraftNotTreated="showOverdraftingTrans" SplitPaymentWithIndex="paymentsDisplay"></AddTransactionComponent>
+                    <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCatID" userID="@userID" gapsToUpdateBudgets="gapsToUpdateTheBudget" addTransactionAfterEdit="updateTranPostEdit" transIDtoEdit="@transIDtoEdit" isTransactionOverlayOpen="closeEditTransWindow" overdraftNotTreated="showOverdraftingTrans" SplitPaymentWithIndex="paymentsDisplay"></AddTransactionComponent>
                 }
             }
         }
@@ -67,24 +35,7 @@
     }
     else
     {
-
-        TransactionToAdd newTransaction = new TransactionToAdd()
-                    {
-                        subCategoryID = subCatID,
-                        transValue = transaction.transValue,
-                        transType = transaction.transType,
-                        valueType = transaction.valueType,
-                        transDate = DateTime.Parse(transaction.transDate),
-                        fixedMonthly = transaction.fixedMonthly,
-                        tagID = transaction.tagID,
-                        tagTitle = transaction.tagTitle,
-                        tagColor = transaction.tagColor,
-                        transTitle = transaction.transTitle,
-                        parentTransID = transaction.parentTransID,
-                        description = transaction.description,
-                        splitPayment = transaction.splitPayment
-                    };
-        <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCatID" userID="@userID" gapsToUpdateBudgets="gapsToUpdateTheBudget" addTransactionAfterEdit="updateTranPostEdit" transIDtoEdit="@transaction.id" newTransaction="newTransaction" isTransactionOverlayOpen="closeEditTransWindow" overdraftNotTreated="showOverdraftingTrans" SplitPaymentWithIndex="paymentsDisplay"></AddTransactionComponent>
+        <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCatID" userID="@userID" gapsToUpdateBudgets="gapsToUpdateTheBudget" addTransactionAfterEdit="updateTranPostEdit" transIDtoEdit="@transIDtoEdit" isTransactionOverlayOpen="closeEditTransWindow" overdraftNotTreated="showOverdraftingTrans" SplitPaymentWithIndex="paymentsDisplay"></AddTransactionComponent>
     }
 }
 @if (overdraftDetected && transaction.transType == 3)
@@ -158,70 +109,52 @@
     List<RepeatedTransToShow> reapeatedTransValuesList = new List<RepeatedTransToShow>();
     bool childOfSplit = false;
     TransactionToEdit splitParentTrans = new TransactionToEdit();
-
+    int transIDtoEdit = 0;
     protected override async Task OnInitializedAsync()
     {
-        if (transaction.splitPayment == true)
+        if (transaction.parentTransID.HasValue)
         {
-            //gets the parent transaction and its children:
-            var repeatedTransValuesRes = await Http.GetAsync("api/Transactions/getPaymentTransToEdit/" + transaction.id);
-            if (repeatedTransValuesRes.IsSuccessStatusCode)
+            if (transaction.parentTransID.Value > 0)
             {
-                reapeatedTransValuesList = repeatedTransValuesRes.Content.ReadFromJsonAsync<List<RepeatedTransToShow>>().Result;
-                foreach (RepeatedTransToShow repeatedT in reapeatedTransValuesList)
+                transIDtoEdit = transaction.parentTransID.Value;
+                var findParentRes = await Http.GetAsync("api/Transactions/identifyParent/" + transIDtoEdit);
+                if (findParentRes.IsSuccessStatusCode)
                 {
-                    if (repeatedT.id == transaction.id)
+                    Console.WriteLine("transaction: " + transaction.transTitle + " is a part of a split payment");
+                    var repeatedTransValuesRes = await Http.GetAsync("api/Transactions/getPaymentTransToEdit/" + transIDtoEdit);
+                    if (repeatedTransValuesRes.IsSuccessStatusCode)
                     {
-                        transIndexInPayments = reapeatedTransValuesList.IndexOf(repeatedT) + 1;
-                    }
-                }
-                totalPayments = reapeatedTransValuesList.Count;
-            }
-            else
-            {
-                Console.WriteLine("repeated Trans values failed");
-            }
-        }
-        else if (transaction.parentTransID != null)
-        {
-            var findParentRes = await Http.GetAsync("api/Transactions/identifyParent/" + transaction.parentTransID);
-            if (findParentRes.IsSuccessStatusCode)
-            {
-                Console.WriteLine("transaction: " + transaction.transTitle + " is a part of a split payment");
-                var repeatedTransValuesRes = await Http.GetAsync("api/Transactions/getPaymentTransToEdit/" + transaction.parentTransID);
-                if (repeatedTransValuesRes.IsSuccessStatusCode)
-                {
-                    reapeatedTransValuesList = repeatedTransValuesRes.Content.ReadFromJsonAsync<List<RepeatedTransToShow>>().Result;
-                    foreach (RepeatedTransToShow repeatedT in reapeatedTransValuesList)
-                    {
-                        if (repeatedT.id == transaction.id)
+                        reapeatedTransValuesList = repeatedTransValuesRes.Content.ReadFromJsonAsync<List<RepeatedTransToShow>>().Result;
+                        foreach (RepeatedTransToShow repeatedT in reapeatedTransValuesList)
                         {
-                            transIndexInPayments = reapeatedTransValuesList.IndexOf(repeatedT) + 1;
-                        }
-                    }
-
-                    totalPayments = reapeatedTransValuesList.Count;
-                    childOfSplit = true;
-                    if (transaction.parentTransID.HasValue)
-                    {
-
-                        var getParentDetails = await Http.GetAsync("api/Transactions/getSplitParent/" + transaction.parentTransID);
-                        if (getParentDetails.IsSuccessStatusCode)
-                        {
-                            splitParentTrans = await getParentDetails.Content.ReadFromJsonAsync<TransactionToEdit>();
-                            
+                            if (repeatedT.id == transaction.id)
+                            {
+                                transIndexInPayments = reapeatedTransValuesList.IndexOf(repeatedT) + 1;
+                            }
                         }
 
-
+                        totalPayments = reapeatedTransValuesList.Count;
+                        childOfSplit = true;
                     }
-
-
+                    else
+                    {
+                        Console.WriteLine("finding repeated Trans values failed");
+                    }
                 }
                 else
                 {
-                    Console.WriteLine("finding repeated Trans values failed");
+                    Console.WriteLine("couldn't find parent that has this ID and is split, this transaction is part of a fixed monthly");
                 }
             }
+            else
+            {
+                Console.WriteLine("error in parentTransID- value is 0");
+            }
+        }
+        else
+        {
+            Console.WriteLine("transaction isn't a child");
+            transIDtoEdit = transaction.id;
         }
     }
     public void deleteTransPopUp()
